RESOLVED FIXED149064
[GTK] Web Process crash recovery no longer works
https://bugs.webkit.org/show_bug.cgi?id=149064
Summary [GTK] Web Process crash recovery no longer works
Michael Catanzaro
Reported 2015-09-11 07:14:49 PDT
When the web process crashes, the web view goes white and never recovers. We used to signal the UI process to display an error page. Recently this worked for everything except AC, then it was fixed for AC as well, and now it's seems to be broken either always or almost always.
Attachments
Patch (1.50 KB, patch)
2015-09-15 03:14 PDT, Carlos Garcia Campos
zan: review+
Michael Catanzaro
Comment 1 2015-09-13 07:19:04 PDT
OK, the signal is still being sent, because Epiphany is loading its error page in the web view. If I click View Source on the empty page, the source for the error page is displayed properly. But WebKit never renders the page: it just leaves the page as entirely white (or sometimes entirely black).
Carlos Garcia Campos
Comment 2 2015-09-15 03:14:32 PDT
WebKit Commit Bot
Comment 3 2015-09-15 03:16:07 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 4 2015-09-16 01:00:55 PDT
Note You need to log in before you can comment on or make changes to this bug.