[GTK] Web Process crash recovery no longer works https://bugs.webkit.org/show_bug.cgi?id=149064

Reviewed by Žan Doberšek.

After a web process crash the new DrawingArea is never resized, so
nothing is rendered into the web view.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseDidRelaunchWebProcess): Queue a widget resize to ensure
the new DrawingAreaProxy is resized.

Canonical link: https://commits.webkit.org/167311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189854 268f45cc-cd09-0410-ab3c-d52691b4dbfc